--- a/Movie_Analysis.ipynb
+++ b/Movie_Analysis.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "212f1797",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Libraries \n",
     "from dotenv import load_dotenv, dotenv_values\n",
     "import requests\n",
     "import pandas as pd\n",
@@ -17,17 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ccf33b47",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Function for extrating the movie data\n",
     "def movie(movie_id, key):\n",
     "    url = url = f\"https://api.themoviedb.org/3/movie/{movie_id}?append_to_response=credits&api_key={key}\"\n",
     "\n",
     "    params = {\n",
     "        'api_key': key\n",
     "    }\n",
+    "    #try and except blocks to handle errors \n",
     "    try:\n",
     "        response = requests.get(url, params=params, timeout=5)\n",
     "        # Raise an HTTPError for bad responses (4xx or 5xx)\n",
@@ -1718,13 +1721,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "964759c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop 'status' column\n",
-    "df.drop(columns=['status'], inplace=True)"
+    "df.drop(columns=['status'],inplace=True)"
    ]
   },
   {
