--- a/Movie_Analysis.ipynb
+++ b/Movie_Analysis.ipynb
@@ -8,11 +8,11 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from extraction import movie\n",
-    "from transformation import extract_data,extract_name,get_director,separate_data\n",
+    "from function.extraction import movie\n",
+    "from function.transformation import extract_data,extract_name,get_director,separate_data\n",
     "import pandas as pd\n",
-    "from KPIs import rank_movies\n",
-    "from Visualization import (\n",
+    "from function.KPIs import rank_movies\n",
+    "from function.Visualization import (\n",
     "    plot_revenue_vs_budget,\n",
     "    plot_roi_by_genre,\n",
     "    plot_popularity_vs_rating,\n",
